applications/immich/resources/kiosk-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-kiosk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-kiosk
  template:
    metadata:
      labels:
        app: immich-kiosk
    spec:
      containers:
      - name: immich-kiosk
        image: ghcr.io/damongolding/immich-kiosk
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
