applications/immich/resources/kiosk-service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-kiosk
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.25
  externalTrafficPolicy: Local
  selector:
    app: immich-kiosk
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
