applications/immich/resources/kiosk-backend-traffic-policy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: immich-kiosk-auth-redirect
  namespace: immich
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: immich-kiosk
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    response:
      statusCode: 302
      header:
        set:
        - name: Location
          value: "https://auth.k8s.cguertin.dev/oauth2/start?rd=https://kiosk.cguertin.dev/"
