applications/immich/resources/login-rate-limit.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-login
  namespace: immich
spec:
  hostnames:
  - photos.cguertin.dev
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: Exact
        value: /api/auth/login
      method: POST
    backendRefs:
    - name: immich-server
      port: 2283
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: immich-login-rate-limit
  namespace: immich
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: immich-login
  rateLimit:
    local:
      rules:
      - limit:
          requests: 3
          unit: Minute
